--- a/CSS/body.css
+++ b/CSS/body.css
@@ -1,3 +1,22 @@
+main {
+  display: flex;
+  justify-content: center;
+}
 
+section {
+  display: flex;
+  width: 600px;
+  flex-direction: column;
+  align-items: center;
+}
+
+.img-holder {
+  display: flex;
+  align-items: center;
+  height: 450px;
+}
+.img-holder img {
+  border-radius: 10px;
+}
 
 /*# sourceMappingURL=body.css.map */
