--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,3 +1,31 @@
+main {
+  display: flex;
+  justify-content: center;
+}
 
+section {
+  display: flex;
+  width: 600px;
+  flex-direction: column;
+  align-items: center;
+}
+
+.img-holder {
+  display: flex;
+  align-items: center;
+  height: 450px;
+}
+.img-holder img {
+  border-radius: 10px;
+}
+
+header {
+  display: flex;
+}
+
+* {
+  border: 1px solid gray;
+  margin: 3px;
+}
 
 /*# sourceMappingURL=main.css.map */
