--- a/SASS/main.sass
+++ b/SASS/main.sass
@@ -2,8 +2,19 @@
 @import variables
 @import body
 @import header.sass
+//@import debug
 
 
 *
-    border: 1px solid gray
-    margin: 3px
+    margin: 0
+    padding: 0
+    border-box: box-sizing
+    font-family: Helvetica, sans-serif
+
+
+a
+    color: white
+    text-decoration: none
+
+body
+    height: 100%
