--- a/SASS/body.sass
+++ b/SASS/body.sass
@@ -12,6 +12,23 @@ section
     display: flex
     align-items: center
     height: 450px
+    background-image: "https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png"
 
     img
         border-radius: 10px
+        border: 3px solid $unacar-gold
+        background-image: url("https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png")
+
+button
+    padding: 20px
+    border-radius: 3px
+    border: none
+    background-color: rgb(231, 231, 223)
+    font-size: 15px
+
+input
+    padding: 20px
+    border-radius: 5px
+    border: 1px solid gray
+    max-width: 150px
+    font-size: 20px
